SPARK_SCALA_material
1. Programming with Scala-I 
2. Programming with Scala-II 
3. Introduction to Apache Spark architecture 
4. RDD, transformations and actions 
5. Spark Programming 
6. Spark SQL 
7. Spark Streaming – I 
8. Spark Streaming – II 
9. Machine Learning with Spark MLlib 
10. Live Practice session 

-------------------------------------------------------------------
Other: http://bigdata-madesimple.com/11-interesting-big-data-case-studies-in-telecom/

--------------------------------------------------------------------
https://www.tutorialspoint.com/scala/ for scala overview, set up

https://www.analyticsvidhya.com/blog/2017/01/scala/    - try this once and check some videos

https://www.scala-exercises.org/scala_tutorial/standard_library

Scala for Spark:
https://acadgild.com/blog/introduction-spark-rdd-basic-operations-rdd/
https://acadgild.com/blog/spark-rdds-scala/

--------------------------------------------------------------------
Scala variable declaration:

Syntax is : val or var VariableName : DataType = [Initial Value]
where,
var is mutable i.e. the value can be changed within the logic
val is immutable i.e. the value remains constant

example,
	object FirstPgm {        
		def main(args: Array[String]){
			println("Hello World\n\n\n");                
			print("how are you doing?");                
			var myVal1: Int = 10;    // mutable            
			val myVal2: Int = 50;    // immutable            
			myVal1 = myVal1 + 500;                
			println(myVal1);                
			myVal2 = 1000;           //should error     
			println(myVal2);        
		}
	}
	
on compiling, i.e. scalac FirstPgm.scala,
firstPgm.scala:9: error: reassignment to val                
myVal2 = 1000;                       
^one error found

-----------------------------------------------
Scala allows the inheritance from just one class only. Scala use "extends" keyword to inherit another class, but there are 2 rules,
a) method overriding requires the override keyword
b) only the primary constructor can pass parameters to the base constructor

example,
import java.io._

//Superclass - Point
class Point(val xc: Int, val yc: Int) {
   var x: Int = xc
   var y: Int = yc
   
   def move(dx: Int, dy: Int) {
      x = x + dx
      y = y + dy
      println ("Point x location : " + x);
      println ("Point y location : " + y);
   }
}
//Subclass - Location
class Location(override val xc: Int, override val yc: Int,
   val zc :Int) extends Point(xc, yc){  //Extends makes Location class inherit all non-private members from Point class
   var z: Int = zc
   
   //do not override the corresponding definitions of move in Point superclass since they are different definitions.
   def move(dx: Int, dy: Int, dz: Int) {
      x = x + dx
      y = y + dy
      z = z + dz
      println ("Point x location : " + x);
      println ("Point y location : " + y);
      println ("Point z location : " + z);
   }
}

object Demo {
   def main(args: Array[String]) {
      val loc = new Location(10, 20, 15);

      // Move to a new location
      loc.move(10, 10, 5);
   }
}

--------------------------------------------------------------------
Scala High order functions - 




